--- a/config/params.yaml
+++ b/config/params.yaml
@@ -1,7 +1,7 @@
 pub_topic: "/msis/pointcloud/python"
 
 stonefish: 
-  enabled: False
+  enabled: false
   range_min: 0.5
   range_max: 50.0
   number_of_bins: 100
