--- a/config/params.yaml
+++ b/config/params.yaml
@@ -6,7 +6,9 @@ stonefish:
   range_max: 50.0
   number_of_bins: 100
   frame: "wamv/msis"
+  # frame: "alpha_rise/ping360_link"
   sub_topic: "/wamv/msis/stonefish/data/image"
 
 ping360:
-  sub_topic: "/echo"
+  sub_topic: "/alpha_rise/echo"
+  frame: "alpha_rise/ping360_link"
