--- a/config/params.yaml
+++ b/config/params.yaml
@@ -6,7 +6,7 @@ stonefish:
   range_max: 50.0
   number_of_bins: 100
   # frame: "wamv/msis"
-  frame: "alpha_rise/ping360_link"
+  frame: "alpha_rise/ping360_link_sf"
   sub_topic: "/alpha_rise/msis/stonefish/data/image"
   pub_topic: "/alpha_rise/msis/stonefish/data/pointcloud"
 
