fix: convention and namespace followed

--- a/config/params.yaml
+++ b/config/params.yaml
@@ -1,5 +1,3 @@
-pub_topic: "/msis/pointcloud/python"
-
 stonefish: 
   enabled: true
   range_min: 0.5
@@ -7,10 +5,10 @@ stonefish:
   number_of_bins: 100
   # frame: "wamv/msis"
   frame: "alpha_rise/ping360_link_sf"
-  sub_topic: "/alpha_rise/msis/stonefish/data/image"
-  pub_topic: "/alpha_rise/msis/stonefish/data/pointcloud"
+  sub_topic: "msis/stonefish/data/image"
+  pub_topic: "msis/stonefish/data/pointcloud"
 
 ping360:
-  sub_topic: "/alpha_rise/echo"
-  pub_topic: "/alpha_rise/msis/pointcloud"
   frame: "alpha_rise/ping360_link"
+  sub_topic: "echo"
+  pub_topic: "msis/pointcloud"
